LR avec [CONC_sulf]

--- a/PM_033.Rmd
+++ b/PM_033.Rmd
@@ -38,7 +38,6 @@ data_set$ID<-as.factor(data_set$ID)
 #Enlever les OUTLIER==1
 data_set %>% filter(OUTLIER==0)->data_set
 
-#Creer colonne avec concentration en ATB (ùg/mL)
 data_set$CONC<-data_set$CMI*data_set$xCMI
 ```
 
@@ -69,12 +68,12 @@ calculate_area_trapezoids <- function(x, y) {
 
 # Agreger les donnees par ID, xCMI et TIME, en calculant la moyenne de LOG10_CFU pour chaque groupe
 grouped_data_2 <- data_set %>%
-  group_by(ID, xCMI, TIME, CONC) %>%
+  group_by(ID, xCMI, TIME, CONC_sulf, CONC_TMP, CONC, Idbis) %>%
   summarize(avg_LOG10_CFU = mean(LOG10_CFU, na.rm = TRUE), .groups = 'drop')
 
 # Calculer l'aire sous chaque courbe pour chaque combinaison de ID et xCMI
 areas <- grouped_data_2 %>%
-  group_by(ID, xCMI, CONC) %>%
+  group_by(ID, Idbis, xCMI, CONC_sulf, CONC_TMP, CONC) %>%
   summarize(area_under_curve = calculate_area_trapezoids(TIME, avg_LOG10_CFU), .groups = 'drop')
 
 # AUC : histogramme par xCMI
@@ -88,11 +87,14 @@ ggplot(areas, aes(x = factor(xCMI), y = area_under_curve, fill = factor(xCMI))) 
 
 #Equation 1 : Croissance moyenne de l'inoculum
 ```{r}
-#inoculum moyen obtenu apres exposition à ATB pendant 24h
-Ix<-areas$area_under_curve/24
-Ix <- ifelse(areas$ID %in% c(3, 5, 33), Ix / 8, Ix)
+#inoculum moyen obtenu apres exposition à ATB pendant 24h (ou 8h pour ID 3, 5 et 33)
 
-tableau_Ix <- data.frame(ID = areas$ID, xCMI = areas$xCMI, Ix = Ix)
+Ix <- ifelse(areas$ID %in% c(3, 5, 33), areas$area_under_curve / 8, areas$area_under_curve / 24)
+
+tableau_Ix <- data.frame(ID = areas$ID, Idbis=areas$Idbis, xCMI = areas$xCMI, Ix = Ix)
+
+tableau_Ix <- tableau_Ix %>%
+  filter(!ID %in% c(3, 5, 33))
 
 #taille de l'inoculum de depart
 # Filtrer les donnees pour obtenir les valeurs à TIME = 0.00 pour chaque combinaison de xCMI et ID
@@ -121,7 +123,6 @@ essai_model <- nls(delta_i_x ~ delta_i_max - ((delta_i_max - delta_i_min) * ((CO
                      data = tableau_delta_i_x, # nom du dataset
                      start = list(delta_i_max = max(tableau_delta_i_x$delta_i_x), # valeurs initiales pour aider l'algorithme, prendre les valeurs du tableau publi
                                   delta_i_min = min(tableau_delta_i_x$delta_i_x),
-                                  #CONC = areas$CONC?,
                                   EC2LOG = 1.13,
                                   gam = 2.2))
  # modifiez l'equation comme dans la publi, avec y = deltaI(x) et x = conc antibio
@@ -157,12 +158,12 @@ calculate_area_trapezoids_LR <- function(x, y) {
 
 # Agreger les donnees par ID, xCMI et TIME, en calculant la moyenne de LOG10_CFU pour chaque groupe
 grouped_data_LR <- data_set %>%
-  group_by(ID,Idbis, xCMI, TIME, CONC, ratio) %>%
+  group_by(ID,Idbis, xCMI, TIME, CONC_sulf, ratio) %>%
   summarize(avg_LOG_CFU = mean(OBS_CFU, na.rm = TRUE), .groups = 'drop')
 
 # Calculer l'aire sous chaque courbe pour chaque combinaison de ID et xCMI
 areas_LR <- grouped_data_LR %>%
-  group_by(ID, xCMI, CONC, ratio) %>%
+  group_by(ID, xCMI, CONC_sulf, ratio) %>%
   summarize(area_under_curve_LR = calculate_area_trapezoids_LR (TIME, avg_LOG_CFU), .groups = 'drop')
 
 # AUC : histogramme par xCMI
@@ -173,6 +174,7 @@ ggplot(areas_LR, aes(x = factor(xCMI), y = area_under_curve_LR, fill = factor(xC
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   scale_fill_discrete(name = "xCMI")
 ```
+
 ```{r}
 #Calcul LR
 library(dplyr)
@@ -186,14 +188,14 @@ calculate_area_trapezoids_LR <- function(x, y) {
 
 # Calculer l'AUC pour CONC = 0 (ref)
 auc_ref <- grouped_data_LR %>%
-  filter(CONC == 0) %>%
+  filter(CONC_sulf == 0) %>%
   group_by(ID, Idbis) %>%
   summarize(AUCFU_ref = calculate_area_trapezoids_LR(TIME, avg_LOG_CFU), .groups = 'drop')
 
 # Calculer l'AUC pour CONC ≠ 0 (test)
 auc_test <- grouped_data_LR %>%
-  filter(CONC != 0) %>%
-  group_by(ID, ratio, CONC,xCMI) %>%
+  filter(CONC_sulf != 0) %>%
+  group_by(ID, ratio, CONC_sulf,xCMI) %>%
   summarize(AUCFU_test = calculate_area_trapezoids_LR(TIME, avg_LOG_CFU), .groups = 'drop')
 
 # Combiner les deux tables en fonction de l'ID
@@ -209,14 +211,14 @@ auc_combined <- auc_combined %>%
   mutate(LR = log10(AUCFU_test/AUCFU_ref))
 
  tableau_LR <- auc_combined %>%
-    select(CONC, LR, Idbis) %>%
+    select(CONC_sulf, LR, Idbis) %>%
     mutate(Idbis = substr(Idbis, 1, nchar(Idbis) - 10))
 
 # Afficher le tableau final des LR
 print(tableau_LR)
 
 tableau_LR_pivot <- tableau_LR %>%
-  pivot_wider(names_from = CONC, values_from = LR)
+  pivot_wider(names_from = CONC_sulf, values_from = LR)
 
 print(tableau_LR_pivot)
 ```
@@ -224,11 +226,11 @@ print(tableau_LR_pivot)
 ```{r}
 # Calculer la moyenne des LR par groupe de CONC et Idbis
 tableau_LR_moyenne <- tableau_LR %>%
-  group_by(CONC, Idbis) %>%
+  group_by(CONC_sulf, Idbis) %>%
   summarize(mean_LR = mean(LR, na.rm = TRUE))
 
 tableau_LR_pivot_moyenne <- tableau_LR_moyenne %>%
-  pivot_wider(names_from = CONC, values_from = mean_LR)
+  pivot_wider(names_from = CONC_sulf, values_from = mean_LR)
 
 # Extraire la colonne Idbis
 Idbis_column <- tableau_LR_pivot_moyenne$Idbis
@@ -245,6 +247,6 @@ print(tableau_LR_pivot_moyenne)
 
 #Exporter tableau LR_pivot
 library(writexl)
-write_xlsx(tableau_LR_pivot_moyenne, "tableau_LR.xlsx")
+write_xlsx(tableau_LR_pivot_moyenne, "LR_033.xlsx")
 ```
 
